tests/ui/parser/removed-syntax/removed-syntax-box-patterns.stderr
error: `box_patterns` have been removed
  --> $DIR/removed-syntax-box-patterns.rs:2:9
   |
LL |     let box x = Box::new('c');
   |         ^^^^^

error: `box_patterns` have been removed
  --> $DIR/removed-syntax-box-patterns.rs:7:18
   |
LL |     let Packet { box x } = Packet { x: Box::new(0) };
   |         ------   ^^^
   |         |
   |         while parsing the fields for this pattern

error[E0425]: cannot find value `x` in this scope
  --> $DIR/removed-syntax-box-patterns.rs:3:19
   |
LL |     let _: char = x;
   |                   ^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
